k8s/backend-go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-go
  namespace: demo
  labels:
    app: backend-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-go
  template:
    metadata:
      labels:
        app: backend-go
    spec:
      # serviceAccountName: post-manage-ksa
      containers:
      - name: backend-go
        image: asia-northeast1-docker.pkg.dev/glossy-attic-443507-u6/docker/backend-go:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
