k8s/backend-go-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-go
  namespace: demo
  annotations:
    cloud.google.com/backend-config: '{"default": "backend-go-config"}'
spec:
  selector:
    app: backend-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
