k8s/backend-rails-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-rails
  namespace: demo
  labels:
    app: backend-rails
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-rails
  template:
    metadata:
      labels:
        app: backend-rails
    spec:
      serviceAccountName: post-manage-ksa
      containers:
      - name: backend-rails
        image: asia-northeast1-docker.pkg.dev/glossy-attic-443507-u6/docker/backend-rails:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-rails
  namespace: demo
spec:
  selector:
    app: backend-rails
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
